# fastapi-music-library

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
core/: config.py  security.py
db/: __init__.py  bands.py  base.py  members.py  songs.py  users.py
endpoints/: bands.py  depends.py  members.py  songs.py  tasks.py  users.py
repositories/: bands.py  members.py  songs.py  users.py
schemas/: band.py  member.py  song.py  user.py
