[tool.poetry]
name = "fastapi-music-library"
version = "0.1.0"
description = ""
authors = ["Kalik"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.3"
databases = {extras = ["postgresql"], version = "^0.4.3"}
SQLAlchemy = "1.3"
psycopg2-binary = "^2.9.1"
passlib = "^1.7.4"
pydantic = {extras = ["email"], version = "^1.8.2"}
celery = "^5.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
